--- a/templates/admin/bookForm.html
+++ b/templates/admin/bookForm.html
@@ -3,7 +3,6 @@
 
 <head>
     {% include("parts/meta.html") %}
-    {% include("parts/nav.html")%}
 
     {% if bookID %}
         <title>Edit {{ book.title }}</title>
@@ -14,64 +13,76 @@
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <form method="post" {% if bookID %} action="/admin/books/edit/{{ bookID }}"
+<body>  
+    <div class="viewTopBar" id="editTitle">
+        <a href="/" onclick="window.history.back()">
+        <svg class="backButton" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/>
+            <path fill="#000" d="M 2,12 8.25,6 h 4.62 l -4.2,4 13.32,0 v 3.974823 l -13.3,0 4.2,4 H 8.25 Z"/>
+        </svg></a>
+        <p class="bookTitle center">{% if bookID %}Edit {{ book.title }}{% else %}New Book{% endif %}</p>
+    </div>
+
+    <form id="bookForm" method="post" {% if bookID %} action="/admin/books/edit/{{ bookID }}"
                         {% else %} action="/admin/books/add"
                         {% endif %} enctype="multipart/form-data">
     
-        <label for="title">Title <span class="required">(required)</span></label><br>
-        <input type="text" name="title" id="title" maxlength="128" value="{{ book.title or '' }}" required><br>
+        <label for="title">Title <span class="required">(required)</span></label>
+        <input type="text" name="title" id="title" maxlength="128" value="{{ book.title or '' }}" required>
 
-        <label for="author">Author <span class="required">(required)</span></label><br>
-        <input type="text" name="author" id="author" maxlength="64" value="{{ book.author or '' }}" required><br>
+        <label for="author">Author <span class="required">(required)</span></label>
+        <input type="text" name="author" id="author" maxlength="64" value="{{ book.author or '' }}" required>
 
-        <label for="isbn">ISBN <span class="required">(required)</span></label><br>
-        <input type="text" name="isbn" id="isbn" maxlength="16" value="{{ book.isbn or '' }}" required><br>
+        <label for="isbn">ISBN <span class="required">(required)</span></label>
+        <input type="text" name="isbn" id="isbn" maxlength="16" value="{{ book.isbn or '' }}" required>
 
-        <label for="publisher">Publisher</label><br>
-        <input type="text" name="publisher" id="publisher" maxlength="64" value="{{ book.publisher or '' }}"><br>
+        <label for="publisher">Publisher</label>
+        <input type="text" name="publisher" id="publisher" maxlength="64" value="{{ book.publisher or '' }}">
 
-        <label for="publicationDate">Publication Date</label><br>
-        <input type="date" name="publicationDate" id="publicationDate" value="{{ book.publicationDate or '' }}"><br>
+        <label for="publicationDate">Publication Date</label>
+        <input type="date" name="publicationDate" id="publicationDate" value="{{ book.publicationDate or '' }}">
 
-        <label for="description">Description</label><br>
-        <textarea name="description" id="description" maxlength="512">{{ book.description or '' }}</textarea><br>
+        <label for="description">Description</label>
+        <textarea name="description" id="description" maxlength="512">{{ book.description or '' }}</textarea>
 
-        <label for="pageCount">Page Count</label><br>
-        <input type="number" name="pageCount" id="pageCount" value="{{ book.pageCount or '' }}"><br>
+        <label for="pageCount">Page Count</label>
+        <input type="number" name="pageCount" id="pageCount" value="{{ book.pageCount or '' }}">
 
-        <label for="language">Language</label><br>
+        <label for="language">Language</label>
         <select id="language" name="language">
             {% for code, language in languageCodes.items() %}
             <option value="{{ code }}" {% if book is defined and code == book.language %} selected="selected"
                 {% endif %}>{{ language }}</option>
             {% endfor %}
-        </select><br>
+        </select>
 
-        <label for="genre">Genre</label><br>
-        <input type="text" name="genre" id="genre" maxlength="32" value="{{ book.genre or '' }}"><br>
+        <label for="genre">Genre</label>
+        <input type="text" name="genre" id="genre" maxlength="32" value="{{ book.genre or '' }}">
 
-        <label for="readingAge">Reading Age</label><br>
-        <input type="number" name="readingAge" id="readingAge" value="{{ book.readingAge or '' }}"><br>
+        <label for="readingAge">Reading Age</label>
+        <input type="number" name="readingAge" id="readingAge" value="{{ book.readingAge or '' }}">
 
-        <label for="catalogues">Catalogues</label><br>
+        <label for="catalogues">Catalogues</label>
         <input type="text" name="catalogues" id="catalogues" value="{{ ', '.join(book.catalogues) }}"
-            placeholder="catalogue1, catalogue2, ..."><br>
+            placeholder="catalogue1, catalogue2, ...">
 
-        <label for="file">File</label><br>
-        <input type="file" name="file" id="file" accept=".epub"><br>
+        <label for="file">File</label>
+        <input style="display: none;" type="file" name="file" id="file" accept=".epub">
+        <button id="fileButton" type="button" onclick="document.getElementById('file').click()">Choose file</button>
 
         <input type="submit" value="{% if bookID %}Edit book{% else %}Add book{% endif %}">
     </form>
 
     {% if bookID %}
 
-    <h1> Delete book </h1>
+    <hr>
 
-    <button onclick="{{ 'deleteBookButton(' + bookID + ')' }}">Delete Book</button>
+    <button id="deleteBookButton" onclick="{{ 'deleteBookButton(' + bookID + ')' }}">Delete Book</button>
 
+    <hr>
 
-    <img src="{{ book.coverURL }}" alt="Cover Image">
+    <h2>Current Book Cover</h2>
+
+    <img src="{{ book.coverURL }}" alt="Cover Image" class="viewBookCover">
 
     <script src="/static/scripts/admin/books/edit.js"></script>
 
